<resources>
    <string name="app_name">MadLevel6Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="movie_list_fragment_label">Movie List Fragment</string>
    <string name="movie_detail_fragment_label">Movie Detail Fragment</string>

    <string name="popular_movie_input">The most popular movies of</string>
    <string name="movie_year_hint">year</string>
    <string name="btn_submit">Submit</string>
    <string name="movie_title">Title</string>
    <string name="release_date">Release date</string>
    <string name="overview">Overview</string>
    <string name="movie_description">Description</string>
    <string name="movie_backdrop">This is the backdrop image of the movie.</string>
    <string name="movie_poster">This is the poster image of the movie.</string>
    <string name="movie_number">Number.</string>
    <string name="rating">★ %s</string>

</resources>