<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.MovieDetailFragment">

        <ImageView
            android:id="@+id/ivMovieBackdrop"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/movie_backdrop"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/ivMoviePoster"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/movie_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivMovieBackdrop"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvMovieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:text="@string/movie_title"
            app:layout_constraintStart_toEndOf="@+id/ivMoviePoster"
            app:layout_constraintTop_toBottomOf="@+id/ivMovieBackdrop" />

        <TextView
            android:id="@+id/tvMovieReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/release_date"
            app:layout_constraintStart_toEndOf="@+id/ivMoviePoster"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />

        <TextView
            android:id="@+id/tvMovieRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/rating"
            app:layout_constraintStart_toEndOf="@+id/ivMoviePoster"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieReleaseDate" />

        <TextView
            android:id="@+id/tvMovieOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:text="@string/overview"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivMoviePoster" />

        <TextView
            android:id="@+id/tvMovieDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/movie_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieOverview" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>